--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -11,6 +11,7 @@
     "@keycloak/keycloak-admin-client": "^15.0.2",
     "async": "^3.2.0",
     "axios": "^0.21.1",
+    "canvas": "^2.9.1",
     "connect-redis": "^4.0.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -22,7 +23,10 @@
     "express-session": "^1.17.2",
     "fhir2es": "^4.0.2",
     "fhirpath": "^2.9.0",
+    "googleapis": "^101.0.0",
+    "handlebars": "^4.7.7",
     "http-proxy-middleware": "^1.3.1",
+    "image-size": "^1.0.1",
     "is-empty": "^1.2.0",
     "jest-cucumber": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -34,11 +38,14 @@
     "morgan": "~1.9.1",
     "nanoid": "^3.1.23",
     "nconf": "^0.10.0",
+    "nodemailer": "^6.7.5",
     "object-hash": "^2.2.0",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pdf-lib": "^1.17.1",
+    "pify": "^5.0.0",
     "redis": ">=3.1.1",
     "require-from-string": "^2.0.2",
     "supertest": "^4.0.2",
