--- a/ihris-frontend/package.json
+++ b/ihris-frontend/package.json
@@ -11,6 +11,7 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "apexcharts": "^3.35.3",
     "core-js": "^3.6.5",
     "ethiopic-calendar": "^2.0.0",
     "fetch-defaults": "^1.0.0",
@@ -18,6 +19,7 @@
     "idle-vue": "^2.0.5",
     "keycloak-js": "^15.0.2",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-cookies": "^1.7.4",
     "vue-cron-editor-buefy": "^0.2.13",
     "vue-i18n": "^8.26.3",
