fixed bug with default setup

--- a/ihris-backend/config/baseConfig.json.example
+++ b/ihris-backend/config/baseConfig.json.example
@@ -17,7 +17,7 @@
     },
     {
       "name": "builtFSHFIles",
-      "valueString": "../../ig/fsh-generated/resources"
+      "valueString": "../ig/fsh-generated/resources"
     },
     {
       "name": "profileBaseUrl",
