--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -55,8 +55,7 @@
     "webidl-conversions": "^6.1.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
-    "xlsx": "^0.17.2",
-    "nodemailer": "^6.7.5"
+    "xlsx": "^0.17.2"
   },
   "devDependencies": {
     "jest": "^26.6.3",
