--- a/ihris-frontend/package.json
+++ b/ihris-frontend/package.json
@@ -24,31 +24,34 @@
     "vue-cron-editor-buefy": "^0.2.13",
     "vue-i18n": "^8.26.3",
     "vue-i18n-bridge": "^9.2.0-beta.10",
+    "vue-loader": "^15.9.7",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.2.11",
+    "vuetify": "^2.6.6",
     "vuetify-ethiopian-calendar": "^1.0.2",
     "vuex": "^3.4.0",
+    "webpack": "^5.73.0",
+    "webpack-ruleset": "^0.1.8",
     "whatwg-fetch": "^3.0.0",
     "xlsx": "^0.17.3"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^3.2.0",
-    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-babel": "^5.0.6",
     "@vue/cli-plugin-e2e-nightwatch": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-eslint": "^5.0.6",
     "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-unit-jest": "~4.4.0",
+    "@vue/cli-plugin-unit-jest": "^5.0.6",
     "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
+    "@vue/cli-service": "^5.0.6",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
-    "chromedriver": "83",
-    "eslint": "^6.7.2",
+    "chromedriver": "^102.0.0",
+    "eslint": "^8.17.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "geckodriver": "^1.19.1",
+    "geckodriver": "^3.0.1",
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
