Added Loading Parameters file from defaultSetup

--- a/ihris-backend/config/baseConfig.json.example
+++ b/ihris-backend/config/baseConfig.json.example
@@ -16,6 +16,10 @@
       "valueString": "false"
     },
     {
+      "name": "app:Parameters",
+      "valueString": "../resources/Parameters-ihris-config.signed.json"
+    },
+    {
       "name": "builtFSHFIles",
       "valueString": "../ig/fsh-generated/resources"
     },
