--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.2",
     "fhir2es": "^4.0.2",
     "fhirpath": "^2.9.0",
+    "fsh-sushi": "^2.5.0",
     "googleapis": "^101.0.0",
     "handlebars": "^4.7.7",
     "http-proxy-middleware": "^1.3.1",
