update Parameters file and sign it

--- a/resources/Parameters-ihris-config.json
+++ b/resources/Parameters-ihris-config.json
@@ -701,6 +701,10 @@
           "valueString": "tree"
         },
         {
+          "name": "defaults:fields:PractitionerRole.location:initialValue",
+          "valueString": "Location/federal-ministry-of-health"
+        },
+        {
           "name": "defaults:fields:PractitionerRole.location:user_filter:regex",
           "valueString": "related-location=(.+)"
         },
