--- a/resources/Parameters-ihris-config.json
+++ b/resources/Parameters-ihris-config.json
@@ -538,7 +538,19 @@
         },
         {
           "name": "site:nav:menu:database:menu:salarysource:order",
-          "valueString": "14"
+          "valueString": "15"
+        },
+        {
+          "name": "site:nav:menu:database:menu:identifier:text",
+          "valueString": "Identifier Types"
+        },
+        {
+          "name": "site:nav:menu:database:menu:identifier:url",
+          "valueString": "/resource/search/identifier"
+        },
+        {
+          "name": "site:nav:menu:database:menu:identifier:order",
+          "valueString": "16"
         },
         {
           "name": "site:nav:menu:database:menu:frequency:text",
@@ -550,7 +562,7 @@
         },
         {
           "name": "site:nav:menu:database:menu:frequency:order",
-          "valueString": "16"
+          "valueString": "17"
         },
         {
           "name": "site:nav:menu:reports:text",
