after dev meeting comment

--- a/resources/Parameters-ihris-config.json
+++ b/resources/Parameters-ihris-config.json
@@ -171,23 +171,6 @@
           "name": "workflow:processor:evaluation:file",
           "valueString": "../modules/workflowLeaveEthiopia"
         },
-
-        {
-          "name": "site:nav:menu:dashboard:text",
-          "valueString": "Dashboard"
-        },
-        {
-          "name": "site:nav:menu:dashboard:order",
-          "valueString": "3"
-        },
-        {
-          "name": "site:nav:menu:dashboard:icon",
-          "valueString": "mdi-chart-arc"
-        },
-        {
-          "name": "site:nav:menu:dashboard:url",
-          "valueString": "/dashboard"
-        },
         {
           "name": "site:nav:active",
           "valueString": "person"
@@ -198,7 +181,7 @@
         },
         {
           "name": "site:nav:menu:person:order",
-          "valueString": "4"
+          "valueString": "3"
         },
         {
           "name": "site:nav:menu:person:icon",
@@ -220,13 +203,14 @@
           "name": "site:nav:menu:person:menu:person_add:url",
           "valueString": "/questionnaire/ihris-practitioner/practitioner"
         },
+
         {
           "name": "site:nav:menu:position:text",
           "valueString": "Positions"
         },
         {
           "name": "site:nav:menu:position:order",
-          "valueString": "5"
+          "valueString": "4"
         },
         {
           "name": "site:nav:menu:position:icon",
@@ -254,7 +238,7 @@
         },
         {
           "name": "site:nav:menu:location:order",
-          "valueString": "6"
+          "valueString": "5"
         },
         {
           "name": "site:nav:menu:location:icon",
@@ -277,36 +261,8 @@
           "valueString": "/resource/search/facility"
         },
         {
-          "name": "site:nav:menu:adminUnit:text",
-          "valueString": "Admin Unit"
-        },
-        {
-          "name": "site:nav:menu:adminUnit:order",
-          "valueString": "7"
-        },
-        {
-          "name": "site:nav:menu:adminUnit:icon",
-          "valueString": "mdi-family-tree"
-        },
-        {
-          "name": "site:nav:menu:adminUnit:menu:byLocation:text",
-          "valueString": "By Location"
-        },
-        {
-          "name": "site:nav:menu:adminUnit:menu:byLocation:url",
-          "valueString": "/adminUnit/by-location"
-        },
-        {
-          "name": "site:nav:menu:adminUnit:menu:byReporting:text",
-          "valueString": "By Reporting"
-        },
-        {
-          "name": "site:nav:menu:adminUnit:menu:byReporting:url",
-          "valueString": "/adminUnit/by-reporting"
-        },
-        {
           "name": "site:nav:menu:mhero:order",
-          "valueString": "8"
+          "valueString": "6"
         },
         {
           "name": "site:nav:menu:mhero:text",
@@ -354,7 +310,7 @@
         },
         {
           "name": "site:nav:menu:database:order",
-          "valueString": "9"
+          "valueString": "7"
         },
         {
           "name": "site:nav:menu:database:icon",
@@ -565,12 +521,28 @@
           "valueString": "17"
         },
         {
+          "name": "site:nav:menu:dashboard:text",
+          "valueString": "Dashboard"
+        },
+        {
+          "name": "site:nav:menu:dashboard:order",
+          "valueString": "8"
+        },
+        {
+          "name": "site:nav:menu:dashboard:icon",
+          "valueString": "mdi-chart-arc"
+        },
+        {
+          "name": "site:nav:menu:dashboard:url",
+          "valueString": "/dashboard"
+        },
+        {
           "name": "site:nav:menu:reports:text",
           "valueString": "Reports"
         },
         {
           "name": "site:nav:menu:reports:order",
-          "valueString": "10"
+          "valueString": "9"
         },
         {
           "name": "site:nav:menu:reports:icon",
@@ -594,7 +566,7 @@
         },
         {
           "name": "site:nav:menu:users:order",
-          "valueString": "11"
+          "valueString": "10"
         },
         {
           "name": "site:nav:menu:users:icon",
@@ -625,6 +597,22 @@
           "valueString": "/resource/search/task"
         },
         {
+          "name": "site:nav:menu:password:text",
+          "valueString": "Change Password"
+        },
+        {
+          "name": "site:nav:menu:password:order",
+          "valueString": "11"
+        },
+        {
+          "name": "site:nav:menu:password:icon",
+          "valueString": "mdi-lock-reset"
+        },
+        {
+          "name": "site:nav:menu:password:url",
+          "valueString": "/questionnaire/ihris-change-password/person"
+        },
+        {
           "name": "site:nav:menu:audit:text",
           "valueString": "Audit Logs"
         },
@@ -639,22 +627,6 @@
         {
           "name": "site:nav:menu:audit:url",
           "valueString": "/resource/view/auditevent"
-        },
-        {
-          "name": "site:nav:menu:password:text",
-          "valueString": "Change Password"
-        },
-        {
-          "name": "site:nav:menu:password:order",
-          "valueString": "13"
-        },
-        {
-          "name": "site:nav:menu:password:icon",
-          "valueString": "mdi-lock-reset"
-        },
-        {
-          "name": "site:nav:menu:password:url",
-          "valueString": "/questionnaire/ihris-change-password/person"
         },
         {
           "name": "shortname:Practitioner:format",
@@ -714,7 +686,7 @@
         },
         {
           "name": "defaults:fields:PractitionerRole.location:initialValue",
-          "valueString": "Location/federal-ministry-of-health"
+          "valueString": "Location/ET"
         },
         {
           "name": "defaults:fields:PractitionerRole.location:user_filter:regex",
@@ -742,7 +714,7 @@
         },
         {
           "name": "defaults:fields:Location.partOf:initialValue",
-          "valueString": "Location/federal-ministry-of-health"
+          "valueString": "Location/ET"
         },
         {
           "name": "defaults:fields:Location.partOf:user_filter:regex",
