add self service control inside config

--- a/ihris-backend/config/baseConfig.json.example
+++ b/ihris-backend/config/baseConfig.json.example
@@ -12,6 +12,10 @@
       "valueString": "ihris"
     },
     {
+      "name": "app:canSelfSignup",
+      "valueString": "true"
+    },
+    {
       "name": "app:installed",
       "valueString": "false"
     },
