setting env var for site path

--- a/ihris-backend/Dockerfile
+++ b/ihris-backend/Dockerfile
@@ -47,6 +47,9 @@ ENV IHRIS_ELASTICSEARCH__BASE=$IHRIS_ELASTICSEARCH__BASE
 ARG IHRIS_KIBANA__BASE=http://localhost:5601
 ENV IHRIS_KIBANA__BASE=$IHRIS_KIBANA__BASE
 
+ARG IHRIS_APP__SITE__PATH=/src/ihris-backend/site
+ENV IHRIS_APP__SITE__PATH=$IHRIS_APP__SITE__PATH
+
 WORKDIR /src/ihris-backend/site
 
 EXPOSE 3000
