adding site/core path into docker file

--- a/ihris-backend/Dockerfile
+++ b/ihris-backend/Dockerfile
@@ -50,6 +50,9 @@ ENV IHRIS_KIBANA__BASE=$IHRIS_KIBANA__BASE
 ARG IHRIS_APP__SITE__PATH=/src/ihris-backend/site
 ENV IHRIS_APP__SITE__PATH=$IHRIS_APP__SITE__PATH
 
+ARG IHRIS_APP__CORE__PATH=/src/ihris-backend
+ENV IHRIS_APP__CORE__PATH=$IHRIS_APP__CORE__PATH
+
 WORKDIR /src/ihris-backend/site
 
 EXPOSE 3000
