--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -58,7 +58,12 @@
     "xlsx": "^0.17.2"
   },
   "devDependencies": {
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "prettier": "^2.7.1"
   }
 }
