--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
   # - User:
   # - Implementer:
   - Developer:
+      - dev/roadmap.md
       - dev/customization.md
       - dev/fhir_http.md
       - dev/modules.md
