fixed bugs in Parameters affecting Location loading

--- a/resources/Parameters-ihris-config.signed.json
+++ b/resources/Parameters-ihris-config.signed.json
@@ -168,7 +168,7 @@
         },
         {
           "name": "workflow:processor:evaluation:file",
-          "valueString": "../modules/workflowLeaveEthiopia"
+          "valueString": "../modules/workflowLeave"
         },
         {
           "name": "site:nav:active",
