--- a/ihris-frontend/package.json
+++ b/ihris-frontend/package.json
@@ -11,10 +11,11 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "antlr4": "^4.12.0",
     "core-js": "^3.6.5",
     "ethiopic-calendar": "^2.0.0",
     "fetch-defaults": "^1.0.0",
-    "fhirpath": "^2.2.2",
+    "fhirpath": "^3.3.1",
     "idle-vue": "^2.0.5",
     "keycloak-js": "^15.0.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
