--- a/ihris-frontend/package.json
+++ b/ihris-frontend/package.json
@@ -28,6 +28,7 @@
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.6",
     "vuetify-ethiopian-calendar": "^1.0.2",
+    "vuetify-umalqura": "^0.0.6",
     "vuex": "^3.4.0",
     "webpack": "^5.73.0",
     "webpack-ruleset": "^0.1.8",
