--- a/ihris-backend/ihris-backend-site/ig/ig.ini
+++ b/ihris-backend/ihris-backend-site/ig/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-site.ig.json
+ig = fsh-generated/resources/ImplementationGuide-ihris.json
 template = fhir.base.template#current
