--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,12 +76,13 @@ services:
   ihris:
     container_name: ihris
     image: ihris/ihris
+    #platform: linux/amd64
     ports:
       - "3000:3000"
     depends_on:
       - redis
-    #  - fhir
-    # - es
+      - fhir
+      - es
     restart: on-failure
     environment:
       IHRIS_FHIR__BASE: http://fhir:8080/fhir
