--- a/tools/package.json
+++ b/tools/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^3.2.4",
     "axios": "^0.21.1",
+    "csv-parser": "^3.0.0",
     "fhir": "^4.7.8",
     "nconf": "^0.10.0",
     "urijs": "^1.19.6"
