use sliceName when profile is missing

--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -18,7 +18,7 @@
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.2",
-    "fhir2es": "^4.0.2",
+    "fhir2es": "^5.0.0",
     "fhirpath": "^2.9.0",
     "fsh-sushi": "^2.5.0",
     "googleapis": "^101.0.0",
@@ -46,6 +46,7 @@
     "passport-local": "^1.0.0",
     "pdf-lib": "^1.17.1",
     "pify": "^5.0.0",
+    "qrcode": "^1.5.3",
     "redis": "^3.1.1",
     "require-from-string": "^2.0.2",
     "supertest": "^4.0.2",
